@@ -1,6 +1,7 @@
 package com.somefrills.config;
 
 import com.somefrills.Main;
+import com.somefrills.misc.Utils;
 
 import java.io.File;
 import java.io.IOException;
@@ -9,10 +10,11 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.net.JarURLConnection;
 import java.net.URL;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Enumeration;
+import java.util.List;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
-import java.util.stream.Collectors;
 
 /**
  * Scans the classpath for classes under com.somefrills.features.* that expose a public static
@@ -67,8 +69,7 @@ public class FeatureRegistry {
                             if (currentParent == null || currentParent.isEmpty()) {
                                 setting.overrideParent(feat.key());
                             }
-                            info.settings.put(f, setting);
-                            info.descriptions.put(f, desc.value());
+                            info.settings.add(new SettingInfo(Utils.humanize(f.getName()), Utils.humanize(desc.value()), setting));
                         }
                     }
 
@@ -147,7 +148,7 @@ public class FeatureRegistry {
         }
 
         List<Class<?>> classes = new ArrayList<>();
-        for (String cn : classNames.stream().distinct().collect(Collectors.toList())) {
+        for (String cn : classNames.stream().distinct().toList()) {
             try {
                 classes.add(Class.forName(cn));
             } catch (Throwable ignored) {
@@ -171,8 +172,8 @@ public class FeatureRegistry {
     }
 
     public static void reconcileFeatureSubscriptions() {
-        for(FeatureInfo info : FEATURES) {
-            if(info.featureInstance.isActive()){
+        for (FeatureInfo info : FEATURES) {
+            if (info.featureInstance.isActive()) {
                 Main.eventBus.subscribe(info.clazz);
             } else {
                 Main.eventBus.unsubscribe(info.clazz);
@@ -185,14 +186,23 @@ public class FeatureRegistry {
     }
 
     public static class FeatureInfo {
+        public final String name;
+        public final String description;
         public final Class<?> clazz;
         public final Feature featureInstance;
-        public final Map<Field, SettingGeneric> settings = new LinkedHashMap<>();
-        public final Map<Field, String> descriptions = new LinkedHashMap<>();
+        public final List<SettingInfo> settings = new ArrayList<>();
 
         public FeatureInfo(Class<?> clazz, Feature featureInstance) {
             this.clazz = clazz;
             this.featureInstance = featureInstance;
+            name = Utils.humanize(featureInstance.key());
+            // FIXME: ideally the description should be a separate field,
+            //  but for now we can just reuse the key as the description until
+            //  we have a better system for providing user-friendly descriptions
+            description = Utils.humanize(featureInstance.key());
         }
+    }
+
+    public record SettingInfo(String name, String description, SettingGeneric settingInstance) {
     }
 }
